<resources>
    <string name="app_name">MeatRow</string>
    <string name="title_activity_login_registrate">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Імя</string>
    <string name="description">Опис</string>
    <string name="surname">Прізвище</string>
    <string name="email">e-mail</string>
    <string name="meet_point">Місце зустрічі</string>
    <string name="date_start">Початок зустрічі</string>
    <string name="date_end">Кінець зустрічі</string>
    <string name="tag">Теги</string>
    <string name="create">Створити</string>

</resources>
